# robotics-project

./: .editorconfig  CMakeLists.txt  README.md  design.blend  package.xml  the_arm.blend
config/: controller_gazebo.yaml  controller_moveit.yaml  controller_ros.yaml  gazebo.yaml  mapper_params_online_async.yaml  nav2_params.yaml  ompl_planning.yaml  robot.rviz  robot.srdf  twist_mux.yaml
launch/: launch.py  localization_launch.py  navigation_launch.py
maps/: obstacles.world.map.data  obstacles.world.map.pgm  obstacles.world.map.yaml
meshes/stl/: arm_base.stl  arm_base_mesh.stl  arm_lower.stl  arm_lower_l.stl  arm_lower_mesh.stl  arm_mid.stl  arm_mid_r.stl  arm_torso_mesh.stl  arm_upper.stl  arm_upper_mesh.stl  arm_upper_r.stl  arm_wrist.stl  attach.stl  base_1.stl  base_2.stl  base_body.stl  base_caster.stl  base_lidar.stl  base_wheel_l.stl  base_wheel_r.stl  body.stl  caster.stl  gripper_base.stl  gripper_base_mesh.stl  gripper_l.stl  gripper_r.stl  gripper_right_mesh.stl  lower.stl  mid.stl  mid_l.stl  upper.stl  wheel_r.stl
rviz/: urdf.rviz
src/: arm_pose.cpp  demo.py  spawn_block.py
urdf/: arm.urdf  box.urdf  gazebo.urdf  mobile_base.urdf  robot.urdf  robot.xacro  robotics-project.urdf  robotics_project.urdf  ros2_control.urdf  the_arm.urdf  transmission.urdf
worlds/: default.world  obstacles.world
